--- a/message-processor/composer.json
+++ b/message-processor/composer.json
@@ -22,7 +22,8 @@
     "symfony/monolog-bundle": "^3.0",
     "symfony/runtime": "7.0.*",
     "symfony/validator": "7.0.*",
-    "symfony/yaml": "7.0.*"
+    "symfony/yaml": "7.0.*",
+    "symfony/twig-bundle": "7.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
