--- a/message-processor/.env
+++ b/message-processor/.env
@@ -27,5 +27,5 @@ APP_SECRET=73eb4e5b8bba644a508a3992873e6080
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=sqs://default?region=us-east-1&endpoint=http://localstack:4566&queue_name=counter-increment-queue
 ###< symfony/messenger ###
