--- a/message-processor/config/packages/messenger.yaml
+++ b/message-processor/config/packages/messenger.yaml
@@ -1,4 +1,6 @@
 framework:
   messenger:
     transports:
-      async: "in-memory://"
+      sqs: '%env(MESSENGER_TRANSPORT_DSN)%'
+    routing:
+      'App\Message\CounterIncrementMessage': sqs
