--- a/message-processor/composer.json
+++ b/message-processor/composer.json
@@ -13,6 +13,7 @@
     "aws/aws-sdk-php": "^3.290",
     "doctrine/mongodb-odm": "^2.6",
     "doctrine/mongodb-odm-bundle": "5.4.1",
+    "sentry/sentry-symfony": "*",
     "symfony/amazon-sqs-messenger": "7.0.*",
     "symfony/console": "7.0.*",
     "symfony/dotenv": "7.0.*",
@@ -21,9 +22,9 @@
     "symfony/messenger": "7.0.*",
     "symfony/monolog-bundle": "^3.0",
     "symfony/runtime": "7.0.*",
+    "symfony/twig-bundle": "7.0.*",
     "symfony/validator": "7.0.*",
-    "symfony/yaml": "7.0.*",
-    "symfony/twig-bundle": "7.0.*"
+    "symfony/yaml": "7.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
