--- a/message-processor/composer.json
+++ b/message-processor/composer.json
@@ -27,6 +27,7 @@
     "symfony/yaml": "7.0.*"
   },
   "require-dev": {
+    "infection/infection": "*",
     "phpunit/phpunit": "^10.5",
     "symfony/browser-kit": "7.0.*",
     "symfony/css-selector": "7.0.*",
@@ -40,7 +41,8 @@
     "allow-plugins": {
       "php-http/discovery": true,
       "symfony/flex": true,
-      "symfony/runtime": true
+      "symfony/runtime": true,
+      "infection/extension-installer": true
     },
     "sort-packages": true
   },
